add routing, create home, all pokemon list, starter pokemon list and region list components, update nav links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <nav class="nav">
     <ul class="nav-list">
       <li class="nav-list__item" *ngFor="let item of navItems">
-        {{ item }}
+       <a href="#" routerLink="/{{item.location}}">{{item.name}}</a>
       </li>
     </ul>
   </nav>
