--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,7 @@
+@import'../../styles.scss';
+
 header {
-  background-color: red;
+  background-color: $red;
   padding: 24px;
   display: flex;
   max-width: 100%;
@@ -7,7 +9,7 @@ header {
   align-items: center;
 
   h1 {
-    color: white;
+    color: $white;
   }
 
   .nav {
@@ -24,13 +26,13 @@ header {
     &-list__item a {
       display: block;
       text-decoration: none;
-      background-color: white;
-      color: black;
+      background-color: $white;
+      color: $black;
       padding: 24px;
       margin-right: 12px;
 
       &:hover {
-        background-color: lighten(red, 25%)
+        background-color: lighten($red, 25%)
       }
     }
   }
