--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,13 @@
+$white: #ffffff;
+$red: #e4491d;
+$black: #313131;
+
 * {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 body {
   font-size: 18px;
 }
