--- a/src/app/all-pokemons-list/all-pokemons-list.component.html
+++ b/src/app/all-pokemons-list/all-pokemons-list.component.html
@@ -1,1 +1,3 @@
-<app-pokemon-card *ngFor="let pokemon of pokemons" [pokemon]="pokemon"></app-pokemon-card>
+<div class="pokemon-list">
+  <app-pokemon-card *ngFor="let pokemon of pokemons" [pokemon]="pokemon"></app-pokemon-card>
+</div>
