--- a/src/app/pokemon-card/pokemon-card.component.scss
+++ b/src/app/pokemon-card/pokemon-card.component.scss
@@ -3,6 +3,7 @@
 .pokemon-card {
   width: 100%;
   background-color: $white;
+  border-radius: 4px;
   box-shadow: inset 0 0 0 2px lighten($black, 25%);
   display: flex;
   flex-direction: column;
@@ -10,13 +11,23 @@
   flex: 1;
   align-items: center;
 
-  &__img {
-    max-width: 100%;
+
+  &__img img {
+    max-width: 50%;
     display: block;
+    margin: 0 auto;
+  }
+  
+  &__content {
+    padding: 12px;
     flex: 1 1 auto;
   }
 
-  &__content {
-    padding: 12px;
+  &__type {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: lightgrey;
+    padding: 8px;
+    margin: 4px
   }
 }
