--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,15 @@
-$white: #ffffff;
+$white: #f1f1f1;
 $red: #e4491d;
 $black: #313131;
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
   font-size: 18px;
+  background-color: $white;
 }
