add mediaqueries for responsiveness, made card responsive

--- a/src/app/all-pokemons-list/all-pokemons-list.component.scss
+++ b/src/app/all-pokemons-list/all-pokemons-list.component.scss
@@ -1,13 +1,18 @@
+@import "../../styles.scss";
+
 .pokemon-list {
-  margin: 24px 0;
   display: flex;
   flex-wrap: wrap;
   max-width: 100%;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
 }
 
 app-pokemon-card {
-  width: 18%;
-  margin: 12px;
+  width: 100%;
+  
+  @include desktop {
+    width: 19%;
+    margin: 6px;
+  }
 }
