add 2 fetch methodes for generation list and generation pokemons, add ngOninit function for starter pokemons

--- a/src/app/starter-pokemons-list/starter-pokemons-list.component.html
+++ b/src/app/starter-pokemons-list/starter-pokemons-list.component.html
@@ -1,1 +1,3 @@
-<p>starter-pokemons-list works!</p>
+<div class="pokemon-list">
+  <app-pokemon-card *ngFor="let pokemon of starterPokemons" [pokemon]="pokemon"></app-pokemon-card>
+</div>
