fetch starterpokemon dat a per pokemon. and showed with pokemon card component

--- a/src/app/starter-pokemons-list/starter-pokemons-list.component.html
+++ b/src/app/starter-pokemons-list/starter-pokemons-list.component.html
@@ -1,3 +1,6 @@
-<div class="pokemon-list">
-  <app-pokemon-card *ngFor="let pokemon of starterPokemons" [pokemon]="pokemon"></app-pokemon-card>
+<div *ngFor="let region of regions" >
+  <strong>{{region.region |titlecase}}</strong>
+  <div class="pokemon-list">
+    <app-pokemon-card *ngFor="let pokemon of region.pokemonsData" [pokemon]="pokemon"></app-pokemon-card>
+  </div>
 </div>
