add some type, indenting and formating files

--- a/src/app/starter-pokemons-list/starter-pokemons-list.component.html
+++ b/src/app/starter-pokemons-list/starter-pokemons-list.component.html
@@ -1,6 +1,9 @@
-<div *ngFor="let region of regions" >
-  <strong>{{region.region |titlecase}}</strong>
+<div *ngFor="let region of regions">
+  <strong>{{ region.region | titlecase }}</strong>
   <div class="pokemon-list">
-    <app-pokemon-card *ngFor="let pokemon of region.pokemonsData" [pokemon]="pokemon"></app-pokemon-card>
+    <app-pokemon-card
+      *ngFor="let pokemon of region.pokemonsData"
+      [pokemon]="pokemon"
+    ></app-pokemon-card>
   </div>
 </div>
