add selected class

--- a/src/app/starter-pokemons-list/starter-pokemons-list.component.html
+++ b/src/app/starter-pokemons-list/starter-pokemons-list.component.html
@@ -1,12 +1,12 @@
 <div class="list">
-  <div class="list__region" *ngFor="let region of regions" (click)="onRegionSelect(region)">
+  <div class="list__region" *ngFor="let region of regions" (click)="onRegionSelect(region)" [class.selectedRegion]="region.region === selectedRegion.region">
     {{ region.region | titlecase }}
   </div>
 </div>
   
-<div *ngIf="selectedPokemons" class="pokemon-list">
+<div *ngIf="selectedRegion" class="pokemon-list">
     <app-pokemon-card
-      *ngFor="let pokemon of selectedPokemons"
+      *ngFor="let pokemon of selectedRegion.pokemonsData"
       [pokemon]="pokemon"
     ></app-pokemon-card>
   </div>
