--- a/src/app/all-pokemons-list/all-pokemons-list.component.html
+++ b/src/app/all-pokemons-list/all-pokemons-list.component.html
@@ -1,4 +1,4 @@
 <div class="pokemon-list">
   <app-pokemon-card *ngFor="let pokemon of pokemons | paginate: {itemsPerPage: 25, currentPage: page, totalItems: totalPokemons}" [pokemon]="pokemon"></app-pokemon-card>
 </div>
-<pagination-controls (pageChange)="handlePageEvent($event)"></pagination-controls>
+<pagination-controls class="pagination" (pageChange)="handlePageEvent($event)"></pagination-controls>
