--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,12 @@
 <header>
   <h1>{{ appTitle }}</h1>
+  <label for="nav-checkbox" class="toggle-label">{{toggleChecked ? 'Close' : 'Menu'}}</label>
+  <input id="nav-checkbox" type="checkbox" class="toggle" (change)="changeEvent($event.target)" [(ngModel)]="toggleChecked" />
   <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-list__item" *ngFor="let item of navItems">
-       <a href="#" routerLink="/{{item.location}}">{{item.name}}</a>
-      </li>
-    </ul>
+    <a class="nav__item" *ngFor="let item of navItems" routerLink="/{{ item.location }}">
+    <div >
+        {{ item.name }}
+      </div>
+    </a>
   </nav>
 </header>
