--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="home">
+  <h1>Welcome {{name}}!</h1>
+  <input type='text' [(ngModel)]="name" placeholder="What is your name ?" />
+</div>
+    <app-pokeball></app-pokeball>
