--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,5 @@
   <h1>Welcome {{name}}!</h1>
   <input type='text' [(ngModel)]="name" placeholder="What is your name ?" />
 </div>
-    <!-- <app-pokeball></app-pokeball> -->
+    <app-pokeball></app-pokeball>
 
-    <app-loader></app-loader>
